<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvCultureDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/culture_label"
                android:textSize="18sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvDomainDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domain_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvSymbolDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symbol_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvParentageDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parentage_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvRomanEquivalentDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roman_equivalent_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvDescriptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
